Start working on proper grouping of text types

--- a/named_entity_recognition.ipynb
+++ b/named_entity_recognition.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "Ko3T7YsrkxJM"
    },
@@ -85,7 +85,8 @@
     "from spacy.tokens.doc import Doc\n",
     "from spacy_entity_linker.EntityElement import EntityElement\n",
     "import pandas as pd\n",
-    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG\n",
+    "from helpers import get_groups, make_output_path, make_output_path_for_type"
    ]
   },
   {
@@ -108,6 +109,15 @@
    },
    "source": [
     "## Loading the articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: figure out how to get this modular system working for headlines too"
    ]
   },
   {
