--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -78,6 +78,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: figure out how to get this modular system working for headlines too"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
