Refactor all caps code

--- a/lexical_density.ipynb
+++ b/lexical_density.ipynb
@@ -16,18 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7d6feb1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
-    "    \"save_cols\": [BASE_FAKESPEAK_CONFIG[\"id_col\"], \"lexical_density\"]\n",
-    "}\n",
-    "\n",
-    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
-    "    \"save_cols\": [BASE_MISINFOTEXT_CONFIG[\"id_col\"], \"lexical_density\"]\n",
-    "}"
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG\n",
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -638,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "da99d556",
    "metadata": {},
    "outputs": [],
@@ -649,7 +644,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=using_dataset[\"save_cols\"]\n",
+    "            columns=[using_dataset[\"id_col\"], \"lexical_density\"]\n",
     "        )\n",
     "\n",
     "    summary_df = get_summary_df(dfs, years)\n",
