--- a/liwc_psycholinguistic_emotion.ipynb
+++ b/liwc_psycholinguistic_emotion.ipynb
@@ -1205,16 +1205,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "b4854b3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using_dataset[\"save_cols\"] = liwc_df.columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d71478a9",
    "metadata": {},
@@ -1224,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "cfe2ab0b",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1225,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=using_dataset[\"save_cols\"]\n",
+    "            columns=liwc_df.columns\n",
     "        )"
    ]
   },
