--- a/quote_extraction.ipynb
+++ b/quote_extraction.ipynb
@@ -16,18 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "78386d16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
-    "    \"save_cols\": [BASE_FAKESPEAK_CONFIG[\"id_col\"], \"quote\", \"num_tokens\", \"proportion_of_total_tokens\"]\n",
-    "}\n",
-    "\n",
-    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
-    "    \"save_cols\": [BASE_MISINFOTEXT_CONFIG[\"id_col\"], \"quote\", \"num_tokens\", \"proportion_of_total_tokens\"]\n",
-    "}"
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG\n",
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -961,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d6e81a8d",
    "metadata": {},
    "outputs": [],
@@ -975,7 +970,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=using_dataset[\"save_cols\"]\n",
+    "            columns=[using_dataset[\"id_col\"], \"quote\", \"num_tokens\", \"proportion_of_total_tokens\"]\n",
     "        )\n",
     "\n",
     "        # Save proportion of quote tokens to total tokens in separate sheet\n",
