--- a/sentiment_analyzer.ipynb
+++ b/sentiment_analyzer.ipynb
@@ -99,17 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
-    "    \"save_cols\": [BASE_FAKESPEAK_CONFIG[\"id_col\"], \"polarity\", \"subjectivity\"]\n",
-    "}\n",
-    "\n",
-    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
-    "    \"save_cols\": [BASE_MISINFOTEXT_CONFIG[\"id_col\"], \"polarity\", \"subjectivity\"]\n",
-    "}"
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG\n",
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -1183,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1188,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=using_dataset[\"save_cols\"]\n",
+    "            columns=[using_dataset[\"id_col\"], \"polarity\", \"subjectivity\"]\n",
     "        )\n",
     "    \n",
     "    get_summary_table(years, years_dfs).to_excel(writer, sheet_name=\"Summary\")"
