--- a/lexical_diversity.ipynb
+++ b/lexical_diversity.ipynb
@@ -16,18 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ecbb22f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
-    "    \"save_cols\": [BASE_FAKESPEAK_CONFIG[\"id_col\"], \"lexical_diversity\"]\n",
-    "}\n",
-    "\n",
-    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
-    "    \"save_cols\": [BASE_MISINFOTEXT_CONFIG[\"id_col\"], \"lexical_diversity\"]\n",
-    "}"
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG\n",
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -602,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9ac2ed91",
    "metadata": {},
    "outputs": [],
@@ -613,7 +608,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=using_dataset[\"save_cols\"]\n",
+    "            columns=[using_dataset[\"id_col\"], \"lexical_diversity\"]\n",
     "        )\n",
     "\n",
     "    summary_df = get_summary_df(dfs, years)\n",
