Remove stop-word-only ngrams

--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -19,33 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 18372,
-     "status": "ok",
-     "timestamp": 1734639705185,
-     "user": {
-      "displayName": "Jodie Lee",
-      "userId": "05117498454440747132"
-     },
-     "user_tz": 480
-    },
-    "id": "MhB8SY_NhtDW",
-    "outputId": "f263dea7-611c-498f-d6aa-393f1cb322a1"
-   },
-   "outputs": [],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 3972,
@@ -62,9 +36,41 @@
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
     "import pandas as pd\n",
     "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG\n",
     "from helpers import get_groups, make_output_path, make_output_path_for_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Adam\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
    ]
   },
   {
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using_dataset = misinfotext_config"
+    "using_dataset = fakespeak_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 4063,
@@ -139,108 +145,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>factcheckURL</th>\n",
-       "      <th>originalURL</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>combinedLabel</th>\n",
+       "      <th>originalTextType</th>\n",
        "      <th>originalBodyText</th>\n",
        "      <th>originalHeadline</th>\n",
-       "      <th>originalTextType</th>\n",
-       "      <th>originalDate</th>\n",
        "      <th>originalDateYear</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>http://www.politifact.com/arizona/statements/2...</td>\n",
-       "      <td>https://associatedmediacoverage.com/three-stat...</td>\n",
-       "      <td>Residents of multiple states will be asked to ...</td>\n",
-       "      <td>Multiple States Have Agreed To Implement A ‘Tw...</td>\n",
-       "      <td>News and blog</td>\n",
-       "      <td>2016-05-06</td>\n",
-       "      <td>2016</td>\n",
+       "      <td>Politifact_FALSE_Social media_687276</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>Mexico is paying for the Wall through the new ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>http://www.politifact.com/california/statement...</td>\n",
-       "      <td>https://users.focalbeam.com/fs/distribution:wl...</td>\n",
-       "      <td>Sacramento, CA - United States Senator Dianne ...</td>\n",
-       "      <td>U.S. Senator Dianne Feinstein Opposes Prop. 64...</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>2016-07-12</td>\n",
-       "      <td>2016</td>\n",
+       "      <td>Politifact_FALSE_Social media_25111</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>Chuck Schumer: \"why should American citizens b...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>http://www.politifact.com/california/statement...</td>\n",
-       "      <td>http://www.sacbee.com/opinion/op-ed/soapbox/ar...</td>\n",
-       "      <td>We should anticipate black and gray markets in...</td>\n",
-       "      <td>Why you should buy a locking gasoline cap</td>\n",
-       "      <td>News and blog</td>\n",
-       "      <td>2017-08-04</td>\n",
-       "      <td>2017</td>\n",
+       "      <td>Politifact_FALSE_Social media_735424</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>Billions of dollars are sent to the State of C...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>http://www.politifact.com/california/statement...</td>\n",
-       "      <td>https://nocagastax.com/california-gas-tax-hike...</td>\n",
-       "      <td>As a ballot initiative calling for repeal of a...</td>\n",
-       "      <td>California Gas-Tax-Hike Repeal Campaign Heats Up</td>\n",
-       "      <td>News and blog</td>\n",
-       "      <td>2017-06-15</td>\n",
-       "      <td>2017</td>\n",
+       "      <td>Politifact_FALSE_Social media_594307</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>If 50 Billion $$ were set aside to go towards ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>http://www.politifact.com/california/statement...</td>\n",
-       "      <td>https://chu.house.gov/media-center/press-relea...</td>\n",
-       "      <td>WASHINGTON, DC  The House of Representatives t...</td>\n",
-       "      <td>Rep. Chu Decries \"Heartless\" ACA Repeal Vote</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>2017-05-04</td>\n",
-       "      <td>2017</td>\n",
+       "      <td>Politifact_FALSE_Social media_839325</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                        factcheckURL  \\\n",
-       "0  http://www.politifact.com/arizona/statements/2...   \n",
-       "1  http://www.politifact.com/california/statement...   \n",
-       "2  http://www.politifact.com/california/statement...   \n",
-       "3  http://www.politifact.com/california/statement...   \n",
-       "4  http://www.politifact.com/california/statement...   \n",
+       "                                     ID combinedLabel originalTextType  \\\n",
+       "0  Politifact_FALSE_Social media_687276         False     Social media   \n",
+       "1   Politifact_FALSE_Social media_25111         False     Social media   \n",
+       "2  Politifact_FALSE_Social media_735424         False     Social media   \n",
+       "3  Politifact_FALSE_Social media_594307         False     Social media   \n",
+       "4  Politifact_FALSE_Social media_839325         False     Social media   \n",
        "\n",
-       "                                         originalURL  \\\n",
-       "0  https://associatedmediacoverage.com/three-stat...   \n",
-       "1  https://users.focalbeam.com/fs/distribution:wl...   \n",
-       "2  http://www.sacbee.com/opinion/op-ed/soapbox/ar...   \n",
-       "3  https://nocagastax.com/california-gas-tax-hike...   \n",
-       "4  https://chu.house.gov/media-center/press-relea...   \n",
+       "                                    originalBodyText originalHeadline  \\\n",
+       "0  Mexico is paying for the Wall through the new ...              NaN   \n",
+       "1  Chuck Schumer: \"why should American citizens b...              NaN   \n",
+       "2  Billions of dollars are sent to the State of C...              NaN   \n",
+       "3  If 50 Billion $$ were set aside to go towards ...              NaN   \n",
+       "4  Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...              NaN   \n",
        "\n",
-       "                                    originalBodyText  \\\n",
-       "0  Residents of multiple states will be asked to ...   \n",
-       "1  Sacramento, CA - United States Senator Dianne ...   \n",
-       "2  We should anticipate black and gray markets in...   \n",
-       "3  As a ballot initiative calling for repeal of a...   \n",
-       "4  WASHINGTON, DC  The House of Representatives t...   \n",
-       "\n",
-       "                                    originalHeadline originalTextType  \\\n",
-       "0  Multiple States Have Agreed To Implement A ‘Tw...    News and blog   \n",
-       "1  U.S. Senator Dianne Feinstein Opposes Prop. 64...    Press release   \n",
-       "2          Why you should buy a locking gasoline cap    News and blog   \n",
-       "3   California Gas-Tax-Hike Repeal Campaign Heats Up    News and blog   \n",
-       "4       Rep. Chu Decries \"Heartless\" ACA Repeal Vote    Press release   \n",
-       "\n",
-       "  originalDate  originalDateYear  \n",
-       "0   2016-05-06              2016  \n",
-       "1   2016-07-12              2016  \n",
-       "2   2017-08-04              2017  \n",
-       "3   2017-06-15              2017  \n",
-       "4   2017-05-04              2017  "
+       "   originalDateYear  \n",
+       "0              2019  \n",
+       "1              2019  \n",
+       "2              2019  \n",
+       "3              2019  \n",
+       "4              2019  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 260,
@@ -319,14 +305,23 @@
    },
    "source": [
     "## Prepare dataframes to output to spreadsheet\n",
-    "Currently, the dataframes hold all found ngrams with n=1-5, including ones that only appear once (which isn't very helpful - for reference, the unfiltered 2019 dataframe contains 115,090 entries). To address this issue, we only take the first 20 entries for each n=2-5 (i.e. we take the first 20 bigrams, then the first 20 trigrams, etc. for each year).\n",
+    "Currently, the dataframes hold all found n-grams, including ones that are fully comprised of stop words. We are not interested in those, so we only keep n-grams that have meaningful content, and are not just stop words.\n",
     "\n",
-    "The exception is we take the first 50 monogram entries, since a lot of them tend to be common words and the results are more interesting when we broaden the search. To circumvent this, we also drop the first 10 rows from each dataframe to go further down the monogram list (this can also be adjusted)."
+    "Furthermore, we only take the first 20 entries for each n=2-5 (i.e. we take the first 20 bigrams, then the first 20 trigrams, etc. for each year). The exception is we take the first 50 monogram entries, since a lot of them tend to be common words and the results are more interesting when we broaden the search. These are the most common n-grams (since they are sorted descending by count), which are the ones most interesting to us."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 219,
@@ -342,14 +337,19 @@
    },
    "outputs": [],
    "source": [
+    "def is_all_stop_words(text: str):\n",
+    "  tokens = word_tokenize(text)\n",
+    "  return all(token in stop_words for token in tokens)\n",
+    "\n",
     "# helper function that cleans up the dataframes as outlined above\n",
     "# where df is the ngram dataframe\n",
     "# num_mono is the number of entries to include for monograms\n",
     "# num_other is the number of entries to include for the other ngrams\n",
     "# drop index indicates the number of rows we want to drop from the top of the dataframe\n",
     "def clean_ngram(df: pd.DataFrame, num_mono=50, num_other=20, drop_index=10):\n",
-    "  # drop 20 most common ngrams\n",
-    "  df = df.iloc[drop_index:]\n",
+    "  # Get rid of n-grams that are fully comprised of stop words\n",
+    "  # df[\"doc\"] = list(nlp.pipe(df[\"ngram_text\"]))\n",
+    "  df = df[~df[\"ngram_text\"].apply(is_all_stop_words)]\n",
     "\n",
     "  # filter dataframe by ngram frequency\n",
     "  df1 = df[df['n'] == 1].head(num_mono)\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,49 +422,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>29</th>\n",
        "      <td>1</td>\n",
-       "      <td>an</td>\n",
-       "      <td>3</td>\n",
+       "      <td>trump</td>\n",
+       "      <td>111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>40</th>\n",
        "      <td>1</td>\n",
-       "      <td>withdrawal</td>\n",
-       "      <td>2</td>\n",
+       "      <td>people</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>43</th>\n",
        "      <td>1</td>\n",
-       "      <td>we</td>\n",
-       "      <td>2</td>\n",
+       "      <td>one</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>45</th>\n",
        "      <td>1</td>\n",
-       "      <td>surge</td>\n",
-       "      <td>2</td>\n",
+       "      <td>gun</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>53</th>\n",
        "      <td>1</td>\n",
-       "      <td>new</td>\n",
-       "      <td>2</td>\n",
+       "      <td>president</td>\n",
+       "      <td>65</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    n  ngram_text  ngram_count\n",
-       "10  1          an            3\n",
-       "11  1  withdrawal            2\n",
-       "12  1          we            2\n",
-       "17  1       surge            2\n",
-       "20  1         new            2"
+       "    n ngram_text  ngram_count\n",
+       "29  1      trump          111\n",
+       "40  1     people           85\n",
+       "43  1        one           79\n",
+       "45  1        gun           73\n",
+       "53  1  president           65"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -506,49 +506,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2</td>\n",
-       "      <td>john mccain</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2</td>\n",
-       "      <td>hillary clinton</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2</td>\n",
-       "      <td>by john</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>statement by john</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3</td>\n",
-       "      <td>on hillary clinton</td>\n",
        "      <td>1</td>\n",
+       "      <td>trump</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>new</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>deal</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>border</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>report</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    n          ngram_text  ngram_count\n",
-       "15  2         john mccain            1\n",
-       "17  2     hillary clinton            1\n",
-       "23  2             by john            1\n",
-       "2   3   statement by john            1\n",
-       "5   3  on hillary clinton            1"
+       "    n ngram_text  ngram_count\n",
+       "5   1      trump            4\n",
+       "7   1        new            4\n",
+       "8   1       deal            4\n",
+       "9   1     border            4\n",
+       "10  1     report            3"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
