--- a/word_cloud_NER.ipynb
+++ b/word_cloud_NER.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9d825c85",
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,7 @@
     "            \n",
     "            frequencies = dict(zip(df[\"Entity\"], df[\"Count\"]))\n",
     "            \n",
+    "            # TODO: look for another font that's open source\n",
     "            wordcloud = WordCloud(\n",
     "                width=800, \n",
     "                height=400)\\\n",
