--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using_dataset = fakespeak_config"
+    "using_dataset = misinfotext_config"
    ]
   },
   {
@@ -145,85 +145,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>combinedLabel</th>\n",
-       "      <th>originalTextType</th>\n",
+       "      <th>factcheckURL</th>\n",
+       "      <th>originalURL</th>\n",
        "      <th>originalBodyText</th>\n",
        "      <th>originalHeadline</th>\n",
+       "      <th>originalTextType</th>\n",
+       "      <th>originalDate</th>\n",
        "      <th>originalDateYear</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Politifact_FALSE_Social media_687276</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Social media</td>\n",
-       "      <td>Mexico is paying for the Wall through the new ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>http://www.politifact.com/arizona/statements/2...</td>\n",
+       "      <td>https://associatedmediacoverage.com/three-stat...</td>\n",
+       "      <td>Residents of multiple states will be asked to ...</td>\n",
+       "      <td>Multiple States Have Agreed To Implement A ‘Tw...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2016-05-06</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Politifact_FALSE_Social media_25111</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Social media</td>\n",
-       "      <td>Chuck Schumer: \"why should American citizens b...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://users.focalbeam.com/fs/distribution:wl...</td>\n",
+       "      <td>Sacramento, CA - United States Senator Dianne ...</td>\n",
+       "      <td>U.S. Senator Dianne Feinstein Opposes Prop. 64...</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2016-07-12</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Politifact_FALSE_Social media_735424</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Social media</td>\n",
-       "      <td>Billions of dollars are sent to the State of C...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>http://www.sacbee.com/opinion/op-ed/soapbox/ar...</td>\n",
+       "      <td>We should anticipate black and gray markets in...</td>\n",
+       "      <td>Why you should buy a locking gasoline cap</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2017-08-04</td>\n",
+       "      <td>2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Politifact_FALSE_Social media_594307</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Social media</td>\n",
-       "      <td>If 50 Billion $$ were set aside to go towards ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://nocagastax.com/california-gas-tax-hike...</td>\n",
+       "      <td>As a ballot initiative calling for repeal of a...</td>\n",
+       "      <td>California Gas-Tax-Hike Repeal Campaign Heats Up</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2017-06-15</td>\n",
+       "      <td>2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Politifact_FALSE_Social media_839325</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Social media</td>\n",
-       "      <td>Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://chu.house.gov/media-center/press-relea...</td>\n",
+       "      <td>WASHINGTON, DC  The House of Representatives t...</td>\n",
+       "      <td>Rep. Chu Decries \"Heartless\" ACA Repeal Vote</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2017-05-04</td>\n",
+       "      <td>2017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     ID combinedLabel originalTextType  \\\n",
-       "0  Politifact_FALSE_Social media_687276         False     Social media   \n",
-       "1   Politifact_FALSE_Social media_25111         False     Social media   \n",
-       "2  Politifact_FALSE_Social media_735424         False     Social media   \n",
-       "3  Politifact_FALSE_Social media_594307         False     Social media   \n",
-       "4  Politifact_FALSE_Social media_839325         False     Social media   \n",
+       "                                        factcheckURL  \\\n",
+       "0  http://www.politifact.com/arizona/statements/2...   \n",
+       "1  http://www.politifact.com/california/statement...   \n",
+       "2  http://www.politifact.com/california/statement...   \n",
+       "3  http://www.politifact.com/california/statement...   \n",
+       "4  http://www.politifact.com/california/statement...   \n",
        "\n",
-       "                                    originalBodyText originalHeadline  \\\n",
-       "0  Mexico is paying for the Wall through the new ...              NaN   \n",
-       "1  Chuck Schumer: \"why should American citizens b...              NaN   \n",
-       "2  Billions of dollars are sent to the State of C...              NaN   \n",
-       "3  If 50 Billion $$ were set aside to go towards ...              NaN   \n",
-       "4  Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...              NaN   \n",
+       "                                         originalURL  \\\n",
+       "0  https://associatedmediacoverage.com/three-stat...   \n",
+       "1  https://users.focalbeam.com/fs/distribution:wl...   \n",
+       "2  http://www.sacbee.com/opinion/op-ed/soapbox/ar...   \n",
+       "3  https://nocagastax.com/california-gas-tax-hike...   \n",
+       "4  https://chu.house.gov/media-center/press-relea...   \n",
        "\n",
-       "   originalDateYear  \n",
-       "0              2019  \n",
-       "1              2019  \n",
-       "2              2019  \n",
-       "3              2019  \n",
-       "4              2019  "
+       "                                    originalBodyText  \\\n",
+       "0  Residents of multiple states will be asked to ...   \n",
+       "1  Sacramento, CA - United States Senator Dianne ...   \n",
+       "2  We should anticipate black and gray markets in...   \n",
+       "3  As a ballot initiative calling for repeal of a...   \n",
+       "4  WASHINGTON, DC  The House of Representatives t...   \n",
+       "\n",
+       "                                    originalHeadline originalTextType  \\\n",
+       "0  Multiple States Have Agreed To Implement A ‘Tw...    News and blog   \n",
+       "1  U.S. Senator Dianne Feinstein Opposes Prop. 64...    Press release   \n",
+       "2          Why you should buy a locking gasoline cap    News and blog   \n",
+       "3   California Gas-Tax-Hike Repeal Campaign Heats Up    News and blog   \n",
+       "4       Rep. Chu Decries \"Heartless\" ACA Repeal Vote    Press release   \n",
+       "\n",
+       "  originalDate  originalDateYear  \n",
+       "0   2016-05-06              2016  \n",
+       "1   2016-07-12              2016  \n",
+       "2   2017-08-04              2017  \n",
+       "3   2017-06-15              2017  \n",
+       "4   2017-05-04              2017  "
       ]
      },
      "execution_count": 5,
@@ -271,31 +291,42 @@
    "source": [
     "# helper function to find ngrams for articles from each year\n",
     "def get_ngram_counts(df: pd.DataFrame, col: str):\n",
-    "  # initialize vector\n",
-    "  c_vec = CountVectorizer(ngram_range=(1, 5))\n",
+    "  try:\n",
+    "    # initialize vector\n",
+    "    c_vec = CountVectorizer(ngram_range=(1, 5))\n",
     "\n",
-    "  # input to fit_transform must be an iterable of strings\n",
-    "  ngrams = c_vec.fit_transform(df[col].to_list())\n",
+    "    # input to fit_transform must be an iterable of strings\n",
+    "    ngrams = c_vec.fit_transform(df[col].to_list())\n",
     "\n",
-    "  # initialize vocabulary after calling fit_transform\n",
-    "  vocab = c_vec.vocabulary_\n",
+    "    # initialize vocabulary after calling fit_transform\n",
+    "    vocab = c_vec.vocabulary_\n",
     "\n",
-    "  count_values = ngrams.toarray().sum(axis=0)\n",
+    "    count_values = ngrams.toarray().sum(axis=0)\n",
     "\n",
-    "  # list to hold ngram rows that will be turned into a dataframe\n",
-    "  ngram_list = []\n",
+    "    # list to hold ngram rows that will be turned into a dataframe\n",
+    "    ngram_list = []\n",
     "\n",
-    "  for count, text in sorted([(count_values[i], k) for k, i in vocab.items()], reverse=True):\n",
-    "    n = len(text.split())\n",
-    "    ngram_list.append([n, text, count])\n",
+    "    for count, text in sorted([(count_values[i], k) for k, i in vocab.items()], reverse=True):\n",
+    "      n = len(text.split())\n",
+    "      ngram_list.append([n, text, count])\n",
     "\n",
-    "  headers = ['n', 'ngram_text', 'ngram_count']\n",
-    "  ngram_df = pd.DataFrame(ngram_list, columns=headers)\n",
+    "    headers = ['n', 'ngram_text', 'ngram_count']\n",
+    "    ngram_df = pd.DataFrame(ngram_list, columns=headers)\n",
     "\n",
-    "  # sort the dataframe by n\n",
-    "  ngram_df = ngram_df.sort_values(by=['n', 'ngram_count'], ascending=[True, False])\n",
+    "    # sort the dataframe by n\n",
+    "    ngram_df = ngram_df.sort_values(by=['n', 'ngram_count'], ascending=[True, False])\n",
     "\n",
-    "  return ngram_df"
+    "    return ngram_df\n",
+    "  except Exception as e:\n",
+    "    print(\"Error getting ngram counts\")\n",
+    "    print(e)\n",
+    "\n",
+    "    # Return empty dataframe\n",
+    "    return pd.DataFrame({\n",
+    "      \"n\": [],\n",
+    "      \"ngram_text\": [],\n",
+    "      \"ngram_count\": [],\n",
+    "    })"
    ]
   },
   {
@@ -349,6 +380,11 @@
     "def clean_ngram(df: pd.DataFrame, num_mono=50, num_other=20, drop_index=10):\n",
     "  # Get rid of n-grams that are fully comprised of stop words\n",
     "  # df[\"doc\"] = list(nlp.pipe(df[\"ngram_text\"]))\n",
+    "\n",
+    "  # Pass through the empty df\n",
+    "  if df.shape[0] == 0:\n",
+    "    return df\n",
+    "\n",
     "  df = df[~df[\"ngram_text\"].apply(is_all_stop_words)]\n",
     "\n",
     "  # filter dataframe by ngram frequency\n",
@@ -422,46 +458,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>trump</td>\n",
-       "      <td>111</td>\n",
+       "      <td>troops</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
+       "      <th>6</th>\n",
        "      <td>1</td>\n",
-       "      <td>people</td>\n",
-       "      <td>85</td>\n",
+       "      <td>senator</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <th>11</th>\n",
        "      <td>1</td>\n",
-       "      <td>one</td>\n",
-       "      <td>79</td>\n",
+       "      <td>withdrawal</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
+       "      <th>17</th>\n",
        "      <td>1</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>73</td>\n",
+       "      <td>surge</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
+       "      <th>20</th>\n",
        "      <td>1</td>\n",
-       "      <td>president</td>\n",
-       "      <td>65</td>\n",
+       "      <td>new</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    n ngram_text  ngram_count\n",
-       "29  1      trump          111\n",
-       "40  1     people           85\n",
-       "43  1        one           79\n",
-       "45  1        gun           73\n",
-       "53  1  president           65"
+       "    n  ngram_text  ngram_count\n",
+       "4   1      troops            3\n",
+       "6   1     senator            3\n",
+       "11  1  withdrawal            2\n",
+       "17  1       surge            2\n",
+       "20  1         new            2"
       ]
      },
      "execution_count": 11,
@@ -506,34 +542,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>trump</td>\n",
-       "      <td>4</td>\n",
+       "      <td>statement</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>11</th>\n",
        "      <td>1</td>\n",
-       "      <td>new</td>\n",
-       "      <td>4</td>\n",
+       "      <td>mccain</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>16</th>\n",
        "      <td>1</td>\n",
-       "      <td>deal</td>\n",
-       "      <td>4</td>\n",
+       "      <td>john</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>18</th>\n",
        "      <td>1</td>\n",
-       "      <td>border</td>\n",
-       "      <td>4</td>\n",
+       "      <td>hillary</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>19</th>\n",
        "      <td>1</td>\n",
-       "      <td>report</td>\n",
-       "      <td>3</td>\n",
+       "      <td>clinton</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -541,11 +577,11 @@
       ],
       "text/plain": [
        "    n ngram_text  ngram_count\n",
-       "5   1      trump            4\n",
-       "7   1        new            4\n",
-       "8   1       deal            4\n",
-       "9   1     border            4\n",
-       "10  1     report            3"
+       "4   1  statement            1\n",
+       "11  1     mccain            1\n",
+       "16  1       john            1\n",
+       "18  1    hillary            1\n",
+       "19  1    clinton            1"
       ]
      },
      "execution_count": 12,
@@ -627,10 +663,29 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n"
+     ]
+    }
+   ],
    "source": [
     "for type, df in zip(types, types_dfs):\n",
-    "    years, ngrams_text_years_dfs, ngrams_headline_years_dfs = get_ngram_years_dfs(dataset_df)\n",
+    "    years, ngrams_text_years_dfs, ngrams_headline_years_dfs = get_ngram_years_dfs(df)\n",
     "\n",
     "    output_path = make_output_path_for_type(using_dataset, type, \"ngrams\")\n",
     "\n",
