--- a/_install_modules.ipynb
+++ b/_install_modules.ipynb
@@ -97,11 +97,27 @@
    "source": [
     "!python -m spacy download en_core_web_md"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dc8c205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install seaborn"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
